# ampoule-cli

./: .gitmodules  Cargo.toml  README.md  build.rs  pyproject.toml
.github/workflows/: build.yml
ampoule_cli/: __init__.py  command_pb2.py
src/: device.rs  main.rs
