[package]
name = "ampoule-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
env_logger = "0.11.6"
log = "0.4.25"
prost = "0.13.4"
serialport = "4.7.0"

[build-dependencies]
prost-build = "0.13.4"

[dev-dependencies]
mockall = "0.13.1"
